--- a/app/src/main/res/layout/fragment_recipe_update.xml
+++ b/app/src/main/res/layout/fragment_recipe_update.xml
@@ -30,6 +30,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="40dp"
         android:text="Güncelle"
+        android:backgroundTint="@color/purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +41,7 @@
         android:id="@+id/toolbarUpdateRecipe"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="#D500F9"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
