--- a/app/src/main/res/layout/fragment_recipe_add.xml
+++ b/app/src/main/res/layout/fragment_recipe_add.xml
@@ -38,6 +38,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="40dp"
         android:text="Ekle"
+        android:backgroundTint="@color/purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
